--- a/app/src/main/res/drawable/ic_bin_foreground.xml
+++ b/app/src/main/res/drawable/ic_bin_foreground.xml
@@ -3,11 +3,11 @@
     android:height="108dp"
     android:viewportWidth="41.37931"
     android:viewportHeight="41.37931"
-    android:tint="#000000">
+    android:tint="#FBFBFB">
   <group android:translateX="8.689655"
       android:translateY="8.689655">
       <path
           android:fillColor="#FF000000"
-          android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7H6v12zM19,4h-3.5l-1,-1h-5l-1,1H5v2h14V4z"/>
+          android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
   </group>
 </vector>
